@@ -7,7 +7,7 @@ def get_attempt(wildcards, attempt):
     """Get the number of attempt in resources"""
     return attempt
 
-def get_resources(wildcards, attempt=None, escalation_order=None):
+def get_resources(attempt=None, escalation_order=None):
     if attempt is None:
         attempt = 1  # default for dry-run / first attempt
 
@@ -25,5 +25,4 @@ def get_resources(wildcards, attempt=None, escalation_order=None):
     resources["mem_mb"] = int(resources["mem_mb"])
     resources["mem_per_cpu"] = int(resources["mem_mb"] / resources["cpus"])
 
-    print(f"DEBUG get_resources: attempt={attempt}, profile={profile_name}, resources={resources}")
     return resources
