@@ -8,13 +8,12 @@ rule helpers__fastqc:
         "__environment__.yml"
     container:
         docker["helpers"]
-    threads: lambda wc: get_resources(wc, escalation_order=["small", "medium", "large"])["cpus"]
+    threads: get_resources(escalation_order=["small", "medium", "large"])["cpus"]
     resources:
-        #runtime=lambda wc: get_resources(wc, escalation_order=["small","medium","large"])["runtime"],
-        runtime=1,
-        mem_mb=lambda wc: get_resources(wc, escalation_order=["small","medium","large"])["mem_mb"],
-        cpu_per_task=lambda wc: get_resources(wc, escalation_order=["small","medium","large"])["cpus"],
-        partition=lambda wc: get_resources(wc, escalation_order=["small","medium","large"])["partition"],
+        runtime = get_resources(escalation_order=["small","medium","large"])["runtime"],
+        mem_mb = get_resources(escalation_order=["small","medium","large"])["mem_mb"],
+        cpu_per_task = get_resources(escalation_order=["small","medium","large"])["cpus"],
+        partition = get_resources(escalation_order=["small","medium","large"])["partition"],
     log:
         "{prefix}_fastqc.log"
     retries: 3  # will escalate three positions through the escalation order (meaning, set this number to the length of above escalation order...)
